# build_plugins

./: OAT.xml  README.md  gn_helpers.py  prebuilts_download_config.json  version.gni
build_scripts/: 78914.diff  78930.diff  ace_engine_0224.diff  ace_engine_0311.diff  ace_engine_72398.diff  ace_engine_72511.diff  ace_engine_73940.diff  arkui-x-build.patch  arkui-x-fix-fillcolor-issue.patch  arkui-x-slip-rate.patch  arkui-x-support-node-shape.patch  arkui_ace_engine_72752.diff  arkui_for_android_0610.diff  arkui_for_ios_0610.diff  arkui_for_ios_322.diff  build.sh  graphic_2d.patch  graphic_2d_25244.diff  patches.json  rich_editor_wechat_input_6.0.diff  third_party_curl_340.diff  third_party_icu_399.diff  third_party_openssl_324.diff  webInterceptAndTextZoomRatio.diff  web_onInterceptRequest.diff
config/: chromecast_build.gni
config/aosp/: BUILD.gn  abi.gni  config.gni  sysroot.gni
config/ios/: BUILD.gn  collect_clang_rt_ios_a.sh  ios_sdk.gni  ios_sdk.py  rules.gni
config/ios/framework/: Info.plist  libarkui_ios.podspec  module.modulemap
config/ios/tools/: copy_info_plist.py  create_ios_framework.py  create_xcframework.py  install_framework_headers.py
scripts/util/: build_utils.py
sdk/: BUILD.gn  archive_unstripped_lib.py  arkui_cross_sdk_description_std.json  generate_all_types_sdk.py  parse_sdk_description.py  post_build.py  prebuilt_sdk.py  sdk.gni
templates/java/: internal_rules.gni  rules.gni
toolchain/aosp/: BUILD.gn
toolchain/ios/: BUILD.gn
